--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap CSS -->
-  <link href="dist/bootstrap-dark.css" rel="stylesheet">
+  <link href="dist/css/bootstrap-dark.css" rel="stylesheet">
 
   <title>boostrap-dark-5</title>
+
+  <style>
+    /* BrowserSync */
+    #__bs_notify__ {
+      position: fixed;
+      top: calc(100% - 50px) !important;
+      opacity: .5;
+      border-radius: 0 !important;
+      background-color: deepskyblue !important;
+      color: black !important;
+    }
+  </style>
+  <link rel="icon" href="favicon.ico">
 </head>
 <body>
   <div class="container">
@@ -21,62 +34,77 @@
 
         <h2>The Dark Mode Conundrum</h2>
 
-        <p>Dark mode is not easy ... I discussed (and proove) this concept at length back in May 2020 in my quasi-white-paper
+        <p>Dark mode is not easy ... I discussed <i>(and proove)</i> this concept at length back in May 2020 in my quasi-white-paper
           <a href="https://vinorodrigues.github.io/bootstrap-dark/">The Definitive Guide to Dark Mode and Bootstrap 4</a>
-          (Also on <a href="https://github.com/vinorodrigues/bootstrap-dark">GitHub</a>.) And subsequently also churned the Bootstrap 5β1
-          variant <i>(This page!)</i> (Also on <a href="https://github.com/vinorodrigues/bootstrap-dark-5">GitHub</a>.)</p>
+          <i>(Also on <a href="https://github.com/vinorodrigues/bootstrap-dark">GitHub</a>.)</i> And subsequently also churned the Bootstrap 5β1
+          variant <i>(This page!)</i> <i>(Also on <a href="https://github.com/vinorodrigues/bootstrap-dark-5">GitHub</a>.)</i></p>
 
         <p>There are huge contentions around how to make "dark mode" available. For example:</p>
 
         <ul>
-          <li>Toggle button (with all it's JS, persistence issues and the FOUC that goes with it),</li>
-          <li>vs. leverage a pure prefers-color-scheme implementation.</li>
+          <li>Toggle button <i>(with all it's JS, persistence issues (GDPR cookie consent??)</i> and the FOUC that goes with it),</li>
+          <li>vs. leverage a pure <code>prefers-color-scheme</code> media query implementation.</li>
         </ul>
 
         <p>and</p>
 
         <ul>
-          <li>Does each UI concept have it's own @media (prefers-... line, thus creating a larger-than-needs-to-be CSS (like prefers-reduced-motion does in 5β1),</li>
-          <li>vs. inject all the @media (prefers-... at the end of the CSS, thus forcing the coders to maintain two sets of SCSS, leading to maintenance nightmares,</li>
-          <li>vs. go with a whole bunch of sibling classes that can be switched with JS, like <a href="https://tailwindcss.com/docs/dark-mode">Tailwind</a> does.</li>
-          <li>vs. go with a known base class the is switched with JS, like <a href="https://www.gethalfmoon.com/docs/core-javascript-library/#toggling-dark-mode">Halfmoon</a> does.</li>
+          <li>Does each UI concept have it's own <tt>@media (prefers-...</tt> line, thus creating a larger-than-needs-to-be CSS <i>(like <code>prefers-reduced-motion</code> does in 5β1)</i>,</li>
+          <li>vs. inject all the <tt>@media (prefers-...</tt> at the end of the CSS, thus forcing the authors to maintain two sets of SCSS, leading to maintenance nightmares,</li>
+          <li>vs. go with a whole bunch of sibling classes that can be switched with JS, like <a href="https://tailwindcss.com/docs/dark-mode">Tailwind</a> does,</li>
+          <li>vs. go with a known base class that is switched with JS, like <a href="https://www.gethalfmoon.com/docs/core-javascript-library/#toggling-dark-mode">Halfmoon</a> does.</li>
         </ul>
 
-        <p>I guess it comes down to time ... both to decide on how to do this and then churn the code, then test it.</p>
+        <p>I guess it comes down to time ... both to decide on how to do this, <i>and</i> then churn the code, <i>and</i> then test it.</p>
 
-        <p>This body of work explores two methods:</p>
+        <p>This body of work explores three methods decribed in the <i>"<a href="https://vinorodrigues.github.io/bootstrap-dark/">.. Definitive Guide ..</a>"</i> piece:</p>
 
         <ol>
-          <li><code>bootstrap-night</code> - Two CSS files, auto-loaded, but with JS to offer toggle button,</li>
-          <li>and, <code>bootstrap-dark</code> - Pure form, one CSS to drop-replace any, auto OS switching dark mode.</li>
+          <li><code><b>bootstrap-night</b></code> - Two independant theme CSS files, auto-loaded, but with JS to offer toggle button and media query awareness,</li>
+          <li hidden><s><code><b>bootstrap-nightfall</b></code> - Not ported.</s></li>
+          <li value="3"><code><b>bootstrap-nightshade</b></code> - One CSS file, <code>body</code> class driven and with a JS library to offer toggle button, and</li>
+          <li><code><b>bootstrap-dark</b></code> - Pure form <i>(uses the <code>prefers-color-scheme</code> CSS media query)</i> one CSS file that offers auto OS switching dark mode.</li>
         </ol>
       </div>
     </div>
 
-    <hr class="mt-3 mb-3">
+    <br class="mt-3 mb-3">
 
-    <div class="row row-cols-1 row-cols-md-2 mb-3 text-center">
+    <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
       <div class="col">
-        <div class="card mb-4 shadow-sm border-secondary">
+        <div class="card mb-4 shadow-sm border-secondary h-100">
           <div class="card-header">
             <h4 class="my-0 fw-normal">bootstrap-night</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
-              <li>Dark Only drop-in replacement for Bootstrap 5</li>
+              <li>Dark Themed drop-in replacement for Bootstrap 5</li>
             </ul>
             <a href="examples/cheatsheet-night.html" class="w-100 btn btn-lg btn-secondary">See Example</a>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card mb-4 shadow-sm border-primary">
+        <div class="card mb-4 shadow-sm border-danger h-100">
+          <div class="card-header">
+            <h4 class="my-0 fw-normal">bootstrap-nightshade</h4>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Dark Mode Bootstrap 5 with add-on JS library</li>
+            </ul>
+            <a href="examples/cheatsheet-nightshade.html" class="w-100 btn btn-lg btn-danger">See Example</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 shadow-sm border-primary h-100">
           <div class="card-header">
             <h4 class="my-0 fw-normal">bootstrap-dark</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
-              <li>Auto Dark Mode drop-in replacement for Bootstrap 5</li>
+              <li>Dark Mode drop-in substitute for Bootstrap 5</li>
             </ul>
             <a href="examples/cheatsheet-dark.html" class="w-100 btn btn-lg btn-primary">See Example</a>
           </div>
@@ -84,10 +112,21 @@
       </div>
     </div>
 
+    <br class="mt-3 mb-3">
+
+    Visit the <a href="https://github.com/vinorodrigues/bootstrap-dark-5">GitHub repo</a>. for source, compiled CSS, and links to CDN and NPM.
+
+    <hr class="mt-3 mb-3">
+
     <footer class="text-center text-muted">
-      &copy; 2021 Vino Rodrigues
+      Made with <b style="font-size:80%">❤️</b> by Vino Rodrigues | &copy; 2021
     </footer>
 
   </div>
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <!-- Don't need it, but pre-load the browser -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
 </body>
 </html>
