--- a/examples/cheatsheet-nightshade.html
+++ b/examples/cheatsheet-nightshade.html
@@ -19,6 +19,9 @@
       .d-dark-inline { display: none !important; }
       html.dark .d-light-inline { display: none !important; }
       html.dark .d-dark-inline { display: inline !important; }
+      html.dark {
+        transition: none;
+      }
     </style>
     <link rel="icon" href="../favicon.ico">
   </head>
@@ -40,8 +43,12 @@
           <div class="btn-group" role="group">
             <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
             <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-              <li><a id="darkmode-button-l" class="dropdown-item">Set Light Mode</a></li>
-              <li><a id="darkmode-button-d" class="dropdown-item">Set Dark Mode</a></li>
+              <li><a id="darkmode-button-l-1" class="dropdown-item">Set Light Mode</a></li>
+              <li><a id="darkmode-button-d-1" class="dropdown-item">Set Dark Mode</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a id="darkmode-button-l-2" class="dropdown-item">Set Light Mode (no save)</a></li>
+              <li><a id="darkmode-button-d-2" class="dropdown-item">Set Dark Mode (no save)</a></li>
+              <li><hr class="dropdown-divider"></li>
               <li><a id="darkmode-forget" class="dropdown-item">Reset Mode</a></li>
             </ul>
           </div>
@@ -1773,11 +1780,17 @@
       document.querySelector("#darkmode-button").onclick = function(e){
         darkmode.toggleDarkMode();
       }
-      document.querySelector("#darkmode-button-l").onclick = function(e){
-        darkmode.setDarkMode(false);
+      document.querySelector("#darkmode-button-l-1").onclick = function(e){
+        darkmode.setDarkMode(false);  // save=true is default
       }
-      document.querySelector("#darkmode-button-d").onclick = function(e){
-        darkmode.setDarkMode(true);
+      document.querySelector("#darkmode-button-d-1").onclick = function(e){
+        darkmode.setDarkMode(true);  // save=true is default
+      }
+      document.querySelector("#darkmode-button-l-2").onclick = function(e){
+        darkmode.setDarkMode(false, false);
+      }
+      document.querySelector("#darkmode-button-d-2").onclick = function(e){
+        darkmode.setDarkMode(true, false);
       }
       document.querySelector("#darkmode-forget").onclick = function(e){
         darkmode.resetDarkMode();
