oops, need some of the dist to run the gh-pages

--- a/examples/cheatsheet-dark.html
+++ b/examples/cheatsheet-dark.html
@@ -1756,7 +1756,7 @@
 
     <!-- DarkMode.js -->
     <!-- NOT REALLY NEEDED, JUST ADDED HERE TO SHOW PORTABILITY & TEST .min VARIANT -->
-    <script src="../dist/js/darkmode.min.js"></script>
+    <script src="../dist/js/darkmode.js"></script>
 
 
     <!-- Cheatsheet -->
