updated links in index.html

--- a/index.html
+++ b/index.html
@@ -60,10 +60,23 @@
         <p>This body of work explores three methods decribed in the <i>"<a href="https://vinorodrigues.github.io/bootstrap-dark/">.. Definitive Guide ..</a>"</i> piece:</p>
 
         <ol>
-          <li><code><b>bootstrap-night</b></code> - Two independant theme CSS files, auto-loaded, but with JS to offer toggle button and media query awareness,</li>
+          <li><code><b>bootstrap-night</b></code> - Two independant theme CSS files, auto-loaded, but with JS to offer toggle button and media query awareness,
+            <ul>
+              <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/bootstrap-night.md">Quick Start Guide</a></li>
+            </ul>
+          </li>
           <li hidden><s><code><b>bootstrap-nightfall</b></code> - Not ported.</s></li>
-          <li value="3"><code><b>bootstrap-nightshade</b></code> - One CSS file, <code>body</code> class driven and with a JS library to offer toggle button, and</li>
-          <li><code><b>bootstrap-dark</b></code> - Pure form <i>(uses the <code>prefers-color-scheme</code> CSS media query)</i> one CSS file that offers auto OS switching dark mode.</li>
+          <li value="3"><code><b>bootstrap-nightshade</b></code> - One CSS file, <code>body</code> class driven and with a JS library to offer toggle button,
+            <ul>
+              <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/bootstrap-nightshade.md">Quick Start Guide</a></li>
+              <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/darkmode.js.md"><tt>darkmode.js</tt> Reference</a></li>
+            </ul>
+        </li>
+          <li><code><b>bootstrap-dark</b></code> - Pure form <i>(uses the <code>prefers-color-scheme</code> CSS media query)</i> one CSS file that offers auto OS switching dark mode.
+            <ul>
+              <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/bootstrap-dark.md">Quick Start Guide</a></li>
+            </ul>
+          </li>
         </ol>
       </div>
     </div>
