--- a/examples/cheatsheet-dark.html
+++ b/examples/cheatsheet-dark.html
@@ -1755,8 +1755,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
     <!-- DarkMode.js -->
-    <!-- NOT REALLY NEEDED, JUST ADDED HERE TO SHOW PORTABILITY -->
-    <script src="../dist/js/darkmode.esm.js"></script>
+    <!-- NOT REALLY NEEDED, JUST ADDED HERE TO SHOW PORTABILITY & TEST .min VARIANT -->
+    <script src="../dist/js/darkmode.js"></script>
 
 
     <!-- Cheatsheet -->
