added new blackbox variant (like nightshade variant, but uses data attributes)

--- a/examples/cheatsheet-dark.html
+++ b/examples/cheatsheet-dark.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- The page supports both dark and light color schemes,
+         and the page author prefers / default is light. -->
+    <meta name="color-scheme" content="light dark">
+
     <!-- Bootstrap CSS -->
     <link href="../dist/css/bootstrap-dark.css" rel="stylesheet">
 
