--- a/index.html
+++ b/index.html
@@ -127,6 +127,28 @@
 
     <br class="mt-3 mb-3">
 
+    There are a few additional techniques that can be used, but these would use the same patterns as above, but with slight variations.  For example:
+    <ul>
+      <!--
+      <li class="my-3">
+        <p class="h4">bootstrap-unlit</p>
+        <p>The default <code>bootstrap-dark.css</code> file is set that light if default/author preference, and dark is the optional.</p>
+        <p>The <code><b>bootstrap-unlit.css</b></code> file gives one the same outcome, but with dark as the default/author preference.</p>
+        <a href="examples/cheatsheet-unlit.html" class="btn btn-sm btn-primary">See Example</a>
+      </li>
+      -->
+      <li class="my-3">
+        <p class="h4">bootstrap-blackbox <small><sup class="text-danger">NEW!</sup></small></p>
+        <p>The <code>bootstrap-nightshade</code> example shows how one can use a whole-document class to drive the theme,
+          and using the <code>darkmde.js</code> library can further enhance the experience by providing an interactive selection
+          whilst still hounoring the <tt>prefers-color-scheme</tt> media query.</p>
+        <p>But using classes comes with its own conundrum.  If the choice is to use data attribues,
+          then the <code><b>bootstrap-blackbox.css</b></code> file can be used.</p>
+        <a href="examples/cheatsheet-blackbox.html" class="btn btn-sm btn-danger">See Example</a>
+      </li>
+    </ul>
+    <hr>
+
     Visit the <a href="https://github.com/vinorodrigues/bootstrap-dark-5">GitHub repo</a>. for source, compiled CSS, and links to CDN and NPM.
 
     <hr class="mt-3 mb-3">
