bs5b1 bug workarrounds

--- a/examples/cheatsheet-blackbox.html
+++ b/examples/cheatsheet-blackbox.html
@@ -27,13 +27,13 @@
 
 
 
-    <header class="bd-header bg-primary py-3 d-flex align-items-stretch border-bottom border-dark">
+    <header class="bd-header bg-dark py-3 d-flex align-items-stretch border-bottom border-dark">
       <div class="container-fluid d-flex align-items-center">
         <h1 class="d-flex align-items-center fs-4 text-white mb-0">
           <img src="bootstrap-logo-white.svg" width="38" height="30" class="me-3" alt="Bootstrap">
           Blackbox
         </h1>
-        <!-- ***** ***** ***** THE BUTTON GOES HERE ***** ***** ***** -->
+        <!-- ***** ***** ***** THE BUTTON GOES BELOW HERE ***** ***** ***** -->
         <div class="btn-group ms-auto" role="group">
           <a id="darkmode-button" class="btn btn-outline-secondary"><i class="fa fa-moon-o fa-fw d-none d-light-inline" title="Switch to dark mode"></i><i class="fa fa-sun-o fa-fw d-none d-dark-inline" title="Switch to light mode"></i></a>
 
@@ -50,16 +50,16 @@
             </ul>
           </div>
         </div>
-        <!-- ***** ***** ***** THE BUTTON GOES HERE ***** ***** ***** -->
+        <!-- ***** ***** ***** THE BUTTON GOES ABOVE HERE ***** ***** ***** -->
       </div>
     </header>
 
 
-    <div class="bd-cheatsheet container-fluid bg-body">
-      <section id="content">
-        <h2 class="sticky-xl-top fw-bold pt-3 pt-xl-5 pb-2 pb-xl-3">No content</h2>
-        <p class="">... Just press the toggle button etc. <i>(Should start as dark btw.)</i></p>
-        <p class=""><i>Also, right click -> view source</i></p>
+    <div class="bd-cheatsheet container-fluid bg-body mt-5">
+      <section id="content" class="sticky-xl-top fw-bold pt-3 pt-xl-5 pb-2 pb-xl-3">
+        <b class="h2">No content</b><br>&nbsp;<br>
+        ... Just press the toggle button etc. <i>(Should start as dark btw.)</i><br>&nbsp;<br>
+        <i>Also, right click -> view source</i>
       </section>
     </div>
 
