--- a/examples/cheatsheet-dark.html
+++ b/examples/cheatsheet-dark.html
@@ -1756,7 +1756,7 @@
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- DarkMode.js -->
     <!-- NOT REALLY NEEDED, JUST ADDED HERE TO SHOW PORTABILITY & TEST .min VARIANT -->
