--- a/examples/cheatsheet-night.html
+++ b/examples/cheatsheet-night.html
@@ -1899,7 +1899,7 @@
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Cheatsheet -->
     <script src="cheatsheet.js"></script>
