--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <!-- Don't need it, but pre-load the browser -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.js"></script>
+
 
 </body>
 </html>
