--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p>Dark mode is not easy ... I discussed <i>(and proove)</i> this concept at length back in May 2020 in my quasi-white-paper
           <a href="https://vinorodrigues.github.io/bootstrap-dark/">The Definitive Guide to Dark Mode and Bootstrap 4</a>
           <i>(Also on <a href="https://github.com/vinorodrigues/bootstrap-dark">GitHub</a>.)</i> And subsequently also churned the
-          Bootstrap 5 <del>β1</del> <del>β2</del> <ins>β3</ins> variant <i>(This page!)</i> <i>(Also on <a href="https://github.com/vinorodrigues/bootstrap-dark-5">GitHub</a>.)</i></p>
+          Bootstrap 5 variant <i>(This page!)</i> <i>(Also on <a href="https://github.com/vinorodrigues/bootstrap-dark-5">GitHub</a>.)</i></p>
 
         <p>There are huge contentions around how to make "dark mode" available. For example:</p>
 
@@ -52,7 +52,7 @@
         <p>and</p>
 
         <ul>
-          <li>Does each UI concept have it's own <tt>@media (prefers-...</tt> line, thus creating a larger-than-needs-to-be CSS <i>(like <code>prefers-reduced-motion</code> does in 5βx)</i>,</li>
+          <li>Does each UI concept have it's own <tt>@media (prefers-...</tt> line, thus creating a larger-than-needs-to-be CSS <i>(like <code>prefers-reduced-motion</code> does in 5)</i>,</li>
           <li>vs. inject all the <tt>@media (prefers-...</tt> at the end of the CSS, thus forcing the authors to maintain two sets of SCSS, leading to maintenance nightmares,</li>
           <li>vs. go with a whole bunch of sibling classes that can be switched with JS, like <a href="https://tailwindcss.com/docs/dark-mode">Tailwind</a> does,</li>
           <li>vs. go with a known base class that is switched with JS, like <a href="https://www.gethalfmoon.com/docs/core-javascript-library/#toggling-dark-mode">Halfmoon</a> does.</li>
