--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link href="dist/css/bootstrap-dark.css" rel="stylesheet">
 
-  <title>boostrap-dark-5</title>
+  <title>bootstrap-dark-5</title>
 
   <style>
     /* BrowserSync */
@@ -28,7 +28,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>boostrap-dark-5</h1>
+    <h1>bootstrap-dark-5</h1>
 
     <hr class="mt-3 mb-3">
 
