mention meta theme-color

--- a/examples/cheatsheet-dark.html
+++ b/examples/cheatsheet-dark.html
@@ -15,9 +15,12 @@
     <title>Cheatsheet · Bootstrap v5.0</title>
 
     <!-- Cheatsheet -->
-
     <link href="cheatsheet-dark.css" rel="stylesheet">
     <link rel="icon" href="../favicon.ico">
+
+    <!-- Hey, here's something new -->
+    <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)">
   </head>
   <body class="bg-body">
 
