add colors example

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <br class="mt-3 mb-3">
 
-    There are a few additional techniques that can be used, but these would use the same patterns as above, but with slight variations.  For example:
+    <p>There are a few additional techniques that can be used, but these would use the same patterns as above, but with slight variations.  For example:</p>
     <ul>
       <!--
       <li class="my-3">
@@ -150,6 +150,14 @@
         <a href="examples/cheatsheet-blackbox.html" class="btn btn-sm btn-danger">See Example</a>
       </li>
     </ul>
+
+    <br>&nbsp;<br>
+
+    <p>
+      Bootstrap 5.1 introduced a color palette in SCSS only.  I've tried to make it work with darkmode, but not really happy with the outcome.
+      Have a look at <a href="examples/colors.html">the example</a> (uses the <code>bootstrap-dark</code> variant method to create a <code>bootstrap-colors.css</code> add on).
+    </p>
+
     <hr>
 
     Visit the <a href="https://github.com/vinorodrigues/bootstrap-dark-5">GitHub repo</a>. for source, compiled CSS, and links to CDN and NPM.
