fix for issue #33

--- a/examples/cheatsheet-blackbox.html
+++ b/examples/cheatsheet-blackbox.html
@@ -22,7 +22,7 @@
     </style>
     <link rel="icon" href="../favicon.ico">
   </head>
-  <body class="bg-body">
+  <body class="">
 
 
 
@@ -55,7 +55,7 @@
     </header>
 
 
-    <div class="bd-cheatsheet container-fluid bg-body mt-5">
+    <div class="bd-cheatsheet container-fluid mt-5">
       <section id="content" class="sticky-xl-top fw-bold pt-3 pt-xl-5 pb-2 pb-xl-3">
         <b class="h2">No content</b><br>&nbsp;<br>
         ... Just press the toggle button etc. <i>(Should start as dark btw.)</i><br>&nbsp;<br>
