--- a/examples/cheatsheet-night.html
+++ b/examples/cheatsheet-night.html
@@ -159,7 +159,7 @@
 
     <link rel="icon" href="../favicon.ico">
   </head>
-  <body class="bg-body">
+  <body class="">
 
 
 
@@ -231,7 +231,7 @@
         </ul>
       </nav>
     </aside>
-    <div class="bd-cheatsheet container-fluid bg-body">
+    <div class="bd-cheatsheet container-fluid">
       <section id="content">
         <h2 class="sticky-xl-top fw-bold pt-3 pt-xl-5 pb-2 pb-xl-3">Contents</h2>
 
