--- a/examples/cheatsheet-dark.html
+++ b/examples/cheatsheet-dark.html
@@ -22,7 +22,7 @@
     <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)">
   </head>
-  <body class="bg-body">
+  <body class="">
 
 
 
@@ -92,7 +92,7 @@
         </ul>
       </nav>
     </aside>
-    <div class="bd-cheatsheet container-fluid bg-body">
+    <div class="bd-cheatsheet container-fluid">
       <section id="content">
         <h2 class="sticky-xl-top fw-bold pt-3 pt-xl-5 pb-2 pb-xl-3">Contents</h2>
 
