--- a/examples/cheatsheet-nightshade.html
+++ b/examples/cheatsheet-nightshade.html
@@ -22,7 +22,7 @@
     </style>
     <link rel="icon" href="../favicon.ico">
   </head>
-  <body class="bg-body">
+  <body class="">
 
 
 
@@ -105,7 +105,7 @@
         </ul>
       </nav>
     </aside>
-    <div class="bd-cheatsheet container-fluid bg-body">
+    <div class="bd-cheatsheet container-fluid">
       <section id="content">
         <h2 class="sticky-xl-top fw-bold pt-3 pt-xl-5 pb-2 pb-xl-3">Contents</h2>
 
