here's me giving up

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
             </ul>
           </li>
           <li hidden><s><code><b>bootstrap-nightfall</b></code> - Not ported.</s></li>
-          <li value="3"><code><b>bootstrap-nightshade</b></code> - One CSS file, <code>body</code> class driven and with a JS library to offer toggle button,
+          <li value="3"><s><code><b>bootstrap-nightshade</b></code> - One CSS file, <code>body</code> class driven and with a JS library to offer toggle button,</s>
             <ul>
-              <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/bootstrap-nightshade.md">Quick Start Guide</a></li>
-              <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/darkmode.js.md"><tt>darkmode.js</tt> Reference</a></li>
+              <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/bootstrap-nightshade.md"><s>Quick Start Guide</s></a></li>
+              <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/darkmode.js.md"><s><tt>darkmode.js</tt> Reference</s></a></li>
             </ul>
         </li>
           <li><code><b>bootstrap-dark</b></code> - Pure form <i>(uses the <code>prefers-color-scheme</code> CSS media query)</i> one CSS file that offers auto OS switching dark mode.
@@ -101,15 +101,15 @@
         </div>
       </div>
       <div class="col">
-        <div class="card mb-4 shadow-sm border-danger h-100">
+        <div class="card mb-4 shadow-sm border-danger h-100 opacity-50">
           <div class="card-header">
-            <h4 class="my-0 fw-normal">bootstrap-nightshade</h4>
+            <h4 class="my-0 fw-normal"><s></s>bootstrap-nightshade</s></h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
-              <li>Dark Mode Bootstrap 5 with add-on JS library</li>
+              <li><s>Dark Mode Bootstrap 5 with add-on JS library</s></li>
             </ul>
-            <a href="examples/cheatsheet-nightshade.html" class="w-100 btn btn-lg btn-danger">See Example</a>
+            <a href="examples/cheatsheet-nightshade.html" class="w-100 btn btn-lg btn-danger"><s>See Example</s></a>
           </div>
         </div>
       </div>
@@ -141,7 +141,7 @@
       </li>
       -->
       <li class="my-3">
-        <p class="h4">bootstrap-blackbox <small><sup class="text-danger">NEW!</sup></small></p>
+        <p class="h4">bootstrap-blackbox <small class="text-danger"><img href="https://img.shields.io/badge/NEW-red" alt="New!"></small></p>
         <p>The <code>bootstrap-nightshade</code> example shows how one can use a whole-document class to drive the theme,
           and using the <code>darkmde.js</code> library can further enhance the experience by providing an interactive selection
           whilst still hounoring the <tt>prefers-color-scheme</tt> media query.</p>
