--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       </li>
       -->
       <li class="my-3">
-        <p class="h4">bootstrap-blackbox <small class="text-danger"><img href="https://img.shields.io/badge/NEW-red" alt="New!"></small></p>
+        <p class="h4">bootstrap-blackbox <small class="text-danger"><img src="https://img.shields.io/badge/NEW-red" alt="New!"></small></p>
         <p>The <code>bootstrap-nightshade</code> example shows how one can use a whole-document class to drive the theme,
           and using the <code>darkmde.js</code> library can further enhance the experience by providing an interactive selection
           whilst still hounoring the <tt>prefers-color-scheme</tt> media query.</p>
