added color lines

--- a/examples/cheatsheet-night.html
+++ b/examples/cheatsheet-night.html
@@ -275,6 +275,14 @@
             <p><small>This line of text is meant to be treated as fine print.</small></p>
             <p><strong>This line rendered as bold text.</strong></p>
             <p><em>This line rendered as italicized text.</em></p>
+            <p class="text-primary">This line of text is in the primary color.</p>
+            <p class="text-secondary">This line of text is in the secondary color.</p>
+            <p class="text-success">This line of text is in the success color.</p>
+            <p class="text-info">This line of text is in the info color.</p>
+            <p class="text-warning">This line of text is in the warning color.</p>
+            <p class="text-danger">This line of text is in the danger color.</p>
+            <p class="text-light">This line of text is in the light color.</p>
+            <p class="text-dark">This line of text is in the dark color.</p>
             </div>
 
             <div class="bd-example">
