--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
               <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/bootstrap-night.md">Quick Start Guide</a></li>
             </ul>
           </li>
-          <li hidden><s><code><b>bootstrap-nightfall</b></code> - Not ported.</s></li>
-          <li value="3"><s><code><b>bootstrap-nightshade</b></code> - One CSS file, <code>body</code> class driven and with a JS library to offer toggle button,</s>
+          <li hidden><code><b>bootstrap-nightfall</b></code> - Not ported.</li>
+          <li value="3"><code><b>bootstrap-nightshade</b></code> - One CSS file, <code>body</code> class driven and with a JS library to offer toggle button,
             <ul>
-              <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/bootstrap-nightshade.md"><s>Quick Start Guide</s></a></li>
-              <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/darkmode.js.md"><s><tt>darkmode.js</tt> Reference</s></a></li>
+              <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/bootstrap-nightshade.md">Quick Start Guide</a></li>
+              <li><a href="https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/docs/darkmode.js.md"><tt>darkmode.js</tt> Reference</a></li>
             </ul>
         </li>
           <li><code><b>bootstrap-dark</b></code> - Pure form <i>(uses the <code>prefers-color-scheme</code> CSS media query)</i> one CSS file that offers auto OS switching dark mode.
@@ -126,13 +126,13 @@
       <div class="col">
         <div class="card mb-4 shadow-sm border-danger h-100 opacity-50">
           <div class="card-header">
-            <h4 class="my-0 fw-normal"><s></s>bootstrap-nightshade</s></h4>
+            <h4 class="my-0 fw-normal"></s>bootstrap-nightshade</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
-              <li><s>Dark Mode Bootstrap 5 with add-on JS library</s></li>
+              <li>Dark Mode Bootstrap 5 with add-on JS library</li>
             </ul>
-            <a href="examples/cheatsheet-nightshade.html" class="w-100 btn btn-lg btn-danger"><s>See Example</s></a>
+            <a href="examples/cheatsheet-nightshade.html" class="w-100 btn btn-lg btn-danger">See Example</a>
           </div>
         </div>
       </div>
@@ -153,24 +153,22 @@
 
     <br class="mt-3 mb-3">
 
-    <p><s>There are a few additional techniques that can be used, but these would use the same patterns as above, but with slight variations.  For example:</s></p>
+    <p>There are a few additional techniques that can be used, but these would use the same patterns as above, but with slight variations.  For example:</p>
     <ul>
-      <!--
-      <li class="my-3">
+      <li class="my-3" hidden>
         <p class="h4">bootstrap-unlit</p>
         <p>The default <code>bootstrap-dark.css</code> file is set that light if default/author preference, and dark is the optional.</p>
         <p>The <code><b>bootstrap-unlit.css</b></code> file gives one the same outcome, but with dark as the default/author preference.</p>
         <a href="examples/cheatsheet-unlit.html" class="btn btn-sm btn-primary">See Example</a>
       </li>
-      -->
-      <li class="my-3 opacity-50">
-        <p class="h4"><s></s>bootstrap-blackbox <img src="https://img.shields.io/badge/NEW-red" alt="New!"></s></p>
-        <p><s>The <code>bootstrap-nightshade</code> example shows how one can use a whole-document class to drive the theme,
+      <li class="my-3">
+        <p class="h4">bootstrap-blackbox <img src="https://img.shields.io/badge/NEW-red" alt="New!"></s></p>
+        <p>The <code>bootstrap-nightshade</code> example shows how one can use a whole-document class to drive the theme,
           and using the <code>darkmde.js</code> library can further enhance the experience by providing an interactive selection
-          whilst still hounoring the <tt>prefers-color-scheme</tt> media query.</s></p>
-        <p><s>But using classes comes with its own conundrum.  If the choice is to use data attribues,
-          then the <code><b>bootstrap-blackbox.css</b></code> file can be used.</s></p>
-        <a href="examples/cheatsheet-blackbox.html" class="btn btn-sm btn-danger"><s>See Example</s></a>
+          whilst still hounoring the <tt>prefers-color-scheme</tt> media query.</p>
+        <p>But using classes comes with its own conundrum.  If the choice is to use data attribues,
+          then the <code><b>bootstrap-blackbox.css</b></code> file can be used.</p>
+        <a href="examples/cheatsheet-blackbox.html" class="btn btn-sm btn-danger">See Example</a>
       </li>
     </ul>
 
